session实现登录功能

--- a/JavaWeb/网络编程.md
+++ b/JavaWeb/网络编程.md
@@ -49,6 +49,19 @@ ping
 
 实现两台计算机之间的数据交互，通信的两端，严格区分Client和Server
 
+> 三次握手 
+>
+> - C向S发出连接请求，等待S确认
+> - S向C回送一个响应，通知C收到了连接请求
+> - C再次向S发送确认信息，确认连接
+>
+> 四次挥手断开连接
+>
+> - 客户端发出断开连接请求
+> - 服务器端返回响应：稍等    服务器将最后的数据处理完毕
+> - S返回一个响应：确认端口
+> - C发出正式确认断开连接
+
 ![image-20240818173519459](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20240818173519459.png)
 
 #### Socket类
@@ -87,3 +100,5 @@ Socket accept();//接受连接，一直阻塞直到连接
 ![image-20240818175358079](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20240818175358079.png)
 
 ![image-20240818175506679](C:\Users\ASUS\AppData\Roaming\Typora\typora-user-images\image-20240818175506679.png)
+
+> 整个过程中，服务器不能主动连接客户端，必须由客户端先行发起连接才行
