--- a/Java/关于接口.md
+++ b/Java/关于接口.md
@@ -22,3 +22,22 @@ static <K, V> Map.Entry<K, V> entry(K key, V value) {
 }//用于创建Map.Entry对象。
 ```
 
+**面试题**
+
+若两个接口中存在相同的default方法定义，那么子类在实现这两个接口的时候，就必须要对这个方法进行重写。
+
+```
+接口名.super.方法名;
+```
+
+**函数式接口**
+
+jdk8中，接口有且只有一个抽象方法
+
+```
+@FunctionInterface
+1、标识某个函数式接口（提升可读性）
+2.检查这个接口是否是函数式接口
+若不具备这个特征，加注解后会报错，就类似于检查重写的@Overible
+```
+
